Corrected man page for -A usage of ldmsd.

--- a/util/man/ldmsd.man
+++ b/util/man/ldmsd.man
@@ -69,7 +69,7 @@ NUM is the number of bytes of the dirty threshold used for store rollover.
 Run in foreground mode; don't daemonize the program. Default is false.
 .TP
 .BR -A
-Avoid forking auxiliary shell launcher at startup; default is false. Use of rollover stores with spooling requires forking the shell launcher at startup.
+Fork auxiliary shell launcher at startup; default is false. Use of stores with spooling (csv stores in rollover mode and store_job) requires forking the shell launcher at startup.
 .TP
 .BI -f " COUNT"
 .br
