--- a/ReadMe.mkd
+++ b/ReadMe.mkd
@@ -16,23 +16,29 @@ Metric information can be updated by a kernel module which runs only when applic
 and transported using RDMA, resulting in minimal jitter during collection.
 LDMS has been run on 10,000 cores collecting over 100,000 metric values per second with less than 0.2% overhead.
 
-# Obtaining and building LDMS
+# Obtaining and building customized LDMS from source:
 
 You may clone LDMS source (and its submodules) from the official [Git](http://git-scm.com/) repository:
 
-    git clone FIXME-NOT-CURRENT: git://hekili.ca.sandia.gov/git-ovis/repositories/LDMS.git
-    cd LDMS
-    git submodule update --init --recursive
+    git clone https://github.com/ovis-hpc/ovis.git
+    cd ovis
+    git submodule update --init sos
 
 In order to build LDMS from source, you must have
 
 + a working C compiler,
 + automake/autoconf (>=2.63)/libtool
++ libevent2
++ gettext-devel
++ optionally:
 + [readline](http://www.gnu.org/s/readline) if you wish to build `ldmsctl` (which you probably do), and
 + [papi](http://icl.cs.utk.edu/papi/) if you wish to collect performance counter metrics.
-
-LDMS comes with its own version of [libevent](http://libevent.org), but will use the one supplied with your system if it is found.
-Otherwise, it will build libevent from source.
++ [sos](http://www.opengridcomputing.com/wordpress/index.php/products/scalable-object-store/)
++ [libyaml](http://pyyaml.org/wiki/LibYAML) if you enable SOS yaml support.
++ python2-devel
++ glib2
++ openssl-devel
++ doxygen
 
 You may configure LDMS and the rest using
 
@@ -40,6 +46,8 @@ You may configure LDMS and the rest using
     ./packaging/configure-all.sh
 
 The build tree will be in .build-all, not in the source directories.
+Note you may need to tweak the options in configure-all.sh for your platform 
+and needs.
 
 Once configured,
 	cd .build-all
@@ -73,4 +81,13 @@ As part of the configuration step, you may elect to compile support for differen
 
 + Linux boxen.
 + Mac OS X boxen.
-+ Your neighborhood Cray XE6.
++ Your neighborhood Cray >= XE6.
+
+# Building RPMs from source
+
+RHEL 6 and 7 are supported via RPMS. Build your own on RHEL/centos 6 by cloning the repository as above,
+then (assuming you have rpmbuild and others resulting from "yum groupinstall 'Development Tools'"):
+	cd ovis
+	./packaging/firemon6rpms
+or for RHEL7
+	./packaging/firemon7rpms
