--- a/ldms/man/Plugin_perfevent.man
+++ b/ldms/man/Plugin_perfevent.man
@@ -44,6 +44,14 @@ The name of the metric set
 schema=<schema>
 .br
 Optional schema name. It is intended that the same sampler on different nodes with different metrics have a different schema.
+.TP
+component_id=<compid>
+.br
+Optional component identifier. Defaults to zero.
+.TP
+with_jobid=<bool>
+.br
+Option to collect job id with set or 0 if not.
 .TP	
 action=init
 .br
