--- a/ldms/man/ldms_authentication.man
+++ b/ldms/man/ldms_authentication.man
@@ -1,12 +1,13 @@
 .\" Manpage for ldms_authentication
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "02 Nov 2015" "v3.0/RC trinity" "LDMS Authentication man page"
+.TH man 7 "05 Oct 2016" "v3.0/RC trinity" "LDMS Authentication man page"
 
 .SH NAME
 ldms_authentication \- Authentication in LDMS
 
 .SH DESCRIPTION
-Ldmsd servers require clients including other ldmsd (aggregators), ldms_ls, and ldmsctl (if connecting remotely rather than via UNIX socket), to prove they share a secret with the server. The secret is a text file containing the line
+Ldmsd servers require clients including other ldmsd (aggregators), ldms_ls, and
+ldmsd_controller (if connecting remotely rather than via UNIX socket), to prove they share a secret with the server. The secret is a text file containing the line
 .PP
 .RS
        secretword=X
@@ -14,14 +15,14 @@ Ldmsd servers require clients including other ldmsd (aggregators), ldms_ls, and 
 .PP
 where X is a string at least 5 characters long. Lines starting with # in the file are ignored.
 .PP
-Four locations are checked in order for the secret:
+Four locations are checked by ldmsd and ldms_ls in order for the secret:
 .RS
 .TP
 1) the full file path given on the command line via "-a authfile".
 .TP
 2) the full file path given in environment variable LDMS_AUTH_FILE.
 .TP
-3) $HOME/.ldmsauth.conf
+3) $HOME/.ldmsauth.conf.
 .TP
 4) $SYSCONFDIR/ldmsauth.conf (e.g. /etc/ldmsauth.conf)
 .RE
@@ -30,6 +31,9 @@ where $HOME is taken from
 .I /etc/password
 and $SYSCONFDIR is determined at ldms compile time. If one of these is not set, the search continues with the next location.
 A failure in reading one, if the file exists, ends the search and is a failure to authenticate.
+
+For ldmsd_controller, the --auth_file option is mandatory to connect to an ldmsd
+with authentication.
 
 The secret file permissions must be set to 600 or more restrictive.
 
