baler: bclient doc example link fix
bclient documentation `USAGE EXAMPLE` was linking to an example in
another documentation. This commit addresses the issue.

--- a/baler/python/abhttp/bclient.dox
+++ b/baler/python/abhttp/bclient.dox
@@ -55,7 +55,7 @@
  * store: "<bclient-store-location>"
  * \endcode
  *
- * Please see \ref example for an example of the configuration file.
+ * Please see \ref usage_example for an example of the configuration file.
  *
  * \section config_example CONFIGURATION EXAMPLE
  *
